[tool.poetry]
name = "pheme"
version = "21.9.2"
authors = ["Greenbone AG <info@greenbone.net>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
description = "report-generation-service"

classifiers = [
  # Full list: https://pypi.org/pypi?%3Aaction=list_classifiers
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)", # pylint: disable=line-too-long
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

[tool.poetry.dependencies]
python = "^3.8"
django = "=4.2.10"
xmltodict = ">=0.12,<0.14"
pyyaml = ">=5.3.1,<7.0.0"
uritemplate = ">=3.0.1,<5.0.0"
djangorestframework = "=3.14.0"
coreapi = "^2.3.3"
weasyprint = ">=51,<62"
rope = ">=0.17,<1.13"
sentry-sdk = { version = "^1.1.0", optional = true }

[tool.poetry.dev-dependencies]
pylint = ">=2.13.9"
pylint-django = ">=2.5.3"
pytest = ">=7.4.0"
pytest-cov = ">=4.0.0"
pytest-django = ">=3.9"
pytest-env = ">=0.8.1"
autohooks = ">=23.1.0"
autohooks-plugin-pylint = ">=22.8.1"
autohooks-plugin-black = ">=22.11.0"
rope = ">=0.17,<1.13"
pontos = ">=21.6.3"

[tool.poetry.extras]
tracking = ["sentry-sdk"]

[tool.black]
line-length = 80
target-version = ['py38', 'py39', 'py310', 'py311']
exclude = '''
/(
    \.git
  | \.venv
  | \.github
  | \.vscode
  | _build
  | build
  | dist
  | docs
)/
'''

[tool.autohooks]
pre-commit = ['autohooks.plugins.black', 'autohooks.plugins.pylint']
mode = "poetry"

[tool.pontos.version]
version-module-file = "pheme/version/__version__.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
